--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   This documents the miscellaneous techy things I do for research,
   running Linux, side projects and taking over the world. It's mostly for me, but if you find
   something useful, that's cool too.
-baseurl: "/Karthik/" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://karthiikselvam.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jtebert
 github_username:  jtebert
 
