--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   running Linux, side projects and taking over the world. It's mostly for me, but if you find
   something useful, that's cool too.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://karthikselvam.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://karthikselvam.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jtebert
 github_username:  jtebert
 
